[tool.poetry]
name = "mephisto"
version = "0.1.0"
description = ""
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
attrs = "^20.3.0"
coverage = "^5.3.1"
more-itertools = "^8.6.0"
networkx = "^2.5"
matplotlib = "^3.3.3"
graphviz = "^0.16"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.2.1"
mypy = "^0.790"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
